--- a/style.css
+++ b/style.css
@@ -36,6 +36,10 @@ body{
     margin-bottom: 0.7rem;
     font-weight: bold;
     font-family: monospace;
+    
+    overflow-x: auto; 
+    white-space: nowrap; 
+    direction:ltr; 
 }
 
 .btn{
@@ -77,4 +81,36 @@ body{
 
 #igual{
     grid-column: span 3;
+}
+
+
+/* Media Query para dispositivos móviles (ancho máximo de 600px) */
+@media (max-width: 600px) {
+    #Calculadora {
+        
+        width: 90%; 
+        max-width: 300px; 
+        
+        
+        padding: 1rem;
+        gap: 0.75rem; 
+    }
+
+    .btn {
+       
+        font-size: 1.1rem;
+    }
+    
+    .pantalla {
+        
+        font-size: 1.8rem;
+        padding: 0.7rem;
+
+        
+        overflow-x: auto; 
+        white-space: nowrap; 
+        
+        
+        direction: rtl; 
+    }
 }
